# QCNN

./: Dockerfile  QCNN_MNIST.ipynb  QCNN_paper_CNN.ipynb  README.md  docker-compose.yml  pyproject.toml
QCNN/: Benchmarking.py  CNN.py  Hierarchical_circuit.py  Hybrid_embedding_accuracy.py  Hybrid_embedding_entanglement.py  QCNN_circuit.py  Training.py  data.py  embedding.py  result.py  unitary.py
QCNN/Result/: accuracy_result.txt  loss_result.txt  result.txt
QCNN/Result/Data/: CNN_result.py  Hybrid_embedding(structure)_accuracy.py  QCNN_1D_chain_result.py  QCNN_double_layer_result.py  QCNN_triple_layer_result.py  loss_history.py
QCNN/Result/Data/CNN/: CNN_result.py  loss_history.py  loss_history_plot.py
QCNN/Result/Data/Hybrid Embedding/: CrossEntropy_Hybrid.py  MSE_Hybrid.py
QCNN/Result/Data/QCNN 1D/: QCNN_1D_chain_result(crossentropy).py  QCNN_1D_chain_result(mse).py
