[tool.poetry]
name = "qcnn"
version = "0.0.0"
description = ""
authors = ["luaGeeko"]

[tool.poetry.dependencies]
python = "~3.10.0"

# dependencies
tqdm = "^4.45"
numpy = "*"
scikit-learn = "^1.4.2"
tensorflow = "^2.15.0"
plotly = "^5.3.1"
pennylane = "^0.36.0"
pandas = "^2.2.2"
kaleido = "0.2.1"
# format/lint
click = "8.1.3"
flake8 = "^7.0.0"
flake8-phabricator-formatter = "^0.1.1"
isort = { version = "5.13.2", extras = ["pyproject"] }
mypy = "^1.10.0"
mypy-extensions = "^1.0.0"
# testing
ipdb = "^0.13.2"
ipython = "^7.15.0"
pytest = "^8.2.0"
black = "^24.4.2"
matplotlib = "^3.9.0"
torch = "^2.3.0"

[[tool.poetry.source]]
name = "official_pypi"
url = "https://pypi.org/simple"
default = true

[tool.black]
exclude = '''
(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.eggs
  | _pb2\.py
  | client
)
'''
line-length = 100
target_version = ['py310']


[tool.isort]
default_section = "THIRDPARTY"
known_first_party = ["qcnn"]
known_standard_library = ["grp", "typing", "setuptools", "pkg_resources"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 100
use_parentheses = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"